fix:1.修复了socket闪退问题 2.修正了成员名 3.解决了socket版本无法编译的问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="setemailtitle">设置邮箱</string>
     <string name="setwebnotifytitle">设置网页通知</string>
     <string name="setqywxgrouprobottitle">设置企业微信群机器人</string>
+    <string name="setsockettitle">设置socket</string>
     <string name="check_new_version">检查更新</string>
     <string name="to_about">关于</string>
     <string name="to_setting">设置</string>
